--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.4.5",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "next-turnstile": "^1.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
